sort.basic.bubble.AlgBubbleSort1.scala.code
var nbValeurs=getNombresValeurs()
fin = 0

def bubbleSort()  {
  do {
    for (i <- 1 to nbValeurs){
    for (j<- 2 to nbValeurs{
      if(plusPetit(i,j)){
         echange(i,j)
      }
    }
  }
  }
  
  
}